--- a/index.html
+++ b/index.html
@@ -14,9 +14,14 @@
 
 <body>
   <div class="container">
-    <div class="site-header">
-      <h1>Jam Box Studios</h1>
-      <div class="main-nav">
+    <ul role="list" class="skip-links">
+      <li role="listitem"><a href="#site-header">Skip to site header</a></li>
+      <li role="listitem"><a href="#main-content">Skip to main content</a></li>
+      <li role="listitem"><a href="#site-footer">Skip to site footer</a></li>
+    </ul>
+    <div  role="banner" class="site-header" id="site-header">
+      <h1 role="heading" aria-level="1">Jam Box Studios</h1>
+      <div role="navigation" class="main-nav">
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="#">Products</a></li>
@@ -24,21 +29,21 @@
           <li><a href="#">Studio</a></li>
         </ul>
       </div>
-      <img src="https://placekitten.com/1200/900" class="banner">
+      <img src="https://picsum.photos/1200/900" class="banner" alt="banner image">
     </div>
-    <div class="main-content">
-      <h1>Welcome to Jam Box</h1>
+    <div role="main" class="main-content" id="main-content">
+      <h2 role="heading" aria-level="2">Welcome to Jam Box</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
-        <h1>Meet the owner</h1>
-        <ul>
-          <li>Name: John Doe</li>
-          <li>Title: CEO</li>
-          <li>Email: johnjoe@jambox.ca</li>
-          <li>Phone: 613-000-0000</li>
+        <h3 role="heading" aria-level="3">Meet the owner</h3>
+        <ul role="list" itemscope itemtype="https://schema.org/Person">
+          <li role="listitem" itemprop="name">Name: John Doe</li>
+          <li role="listitem" itemprop="jobTitle">Title: CEO</li>
+          <li role="listitem" itemprop="email">Email: johnjoe@jambox.ca</li>
+          <li role="listitem" itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
-        <h1>Address</h1>
+        <h3 role="heading" aria-level="3">Address</h3>
         <p>
           Jambox Studios
           123 Guitar Road,
@@ -47,19 +52,21 @@
         </p>
       </div>
       <div class="contact-section">
-        <h1>Contact Us</h1>
-        <form action="thanks.html">
-          <label>Full Name</label>
-          <input type="text" placeholder="Full Name">
-          <input type="text" placeholder="Email">
-          <input type="text" placeholder="Subject">
-          <b>Your Message</b>
-          <textarea></textarea>
-          <button type="submit">Send</button>
+        <h1 role="heading" aria-level="3">Contact Us</h1>
+        <form role="form" action="thanks.html">
+          <label for="full-name">Full Name</label>
+          <input type="text" id="full-name" placeholder="Full Name" name="full-name">
+          <label for="email">Email</label>
+          <input type="text" id="email" placeholder="Email" name="email">
+          <label for="subject">Subject</label>
+          <input type="text" id="subject" placeholder="Subject" name="subject">
+          <label for="message">Your Message</label>
+          <textarea id="message" name="message"></textarea>
+          <button role="button" type="submit">Send</button>
         </form>
       </div>
     </div>
-    <div class="site-footer">
+    <div role="contentinfo" class="site-footer" id="site-footer">
       &copy; 2021 Jam Box Studios
     </div>
   </div>
