--- a/index.html
+++ b/index.html
@@ -22,28 +22,28 @@
     <div  role="banner" class="site-header" id="site-header">
       <h1 role="heading" aria-level="1">Jam Box Studios</h1>
       <div role="navigation" class="main-nav">
-        <ul>
-          <li><a href="#">Home</a></li>
-          <li><a href="#">Products</a></li>
-          <li><a href="#">Reservation</a></li>
-          <li><a href="#">Studio</a></li>
+        <ul role="list">
+          <li role="listitem"><a href="#">Home</a></li>
+          <li role="listitem"><a href="#">Products</a></li>
+          <li role="listitem"><a href="#">Reservation</a></li>
+          <li role="listitem"><a href="#">Studio</a></li>
         </ul>
       </div>
-      <img src="https://picsum.photos/1200/900" class="banner" alt="banner image">
+      <img src="https://picsum.photos/1200/900" class="banner" alt="banner">
     </div>
     <div role="main" class="main-content" id="main-content">
       <h2 role="heading" aria-level="2">Welcome to Jam Box</h2>
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Temporibus laboriosam praesentium nostrum ipsa eveniet, officia deserunt cumque eius esse enim, ipsam accusantium autem nihil quaerat sequi perferendis optio quia veritatis.</p>
       <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Veniam perferendis expedita sed itaque odit ipsam omnis, eos voluptates magni fugit culpa voluptatibus, inventore eaque, eligendi voluptatum! Voluptate iusto error voluptatibus.</p>
       <div class="owner">
-        <h3 role="heading" aria-level="3">Meet the owner</h3>
+        <h2 role="heading" aria-level="2">Meet the owner</h2>
         <ul role="list" itemscope itemtype="https://schema.org/Person">
           <li role="listitem" itemprop="name">Name: John Doe</li>
           <li role="listitem" itemprop="jobTitle">Title: CEO</li>
           <li role="listitem" itemprop="email">Email: johnjoe@jambox.ca</li>
           <li role="listitem" itemprop="telephone">Phone: 613-000-0000</li>
         </ul>
-        <h3 role="heading" aria-level="3">Address</h3>
+        <h2 role="heading" aria-level="2">Address</h2>
         <p>
           Jambox Studios
           123 Guitar Road,
@@ -52,7 +52,7 @@
         </p>
       </div>
       <div class="contact-section">
-        <h1 role="heading" aria-level="3">Contact Us</h1>
+        <h2 role="heading" aria-level="2">Contact Us</h2>
         <form role="form" action="thanks.html">
           <label for="full-name">Full Name</label>
           <input type="text" id="full-name" placeholder="Full Name" name="full-name">
